support export/import docker host config

--- a/directives/dockerHostConfig.html
+++ b/directives/dockerHostConfig.html
@@ -68,4 +68,8 @@
 			</tr>
 		</tbody>
 	</table>
+	<div style="clear: both;">
+		<button ng-click="openExportConfigModal()" class="btn btn-info" tooltip="{{'Export Config' | translate}}" translate>Export</button>
+		<button ng-click="openImportConfigModal()" class="btn btn-info" tooltip="{{'Import Config' | translate}}" translate>Import</button>
+	</div>
 </div>
