--- a/index.src.html
+++ b/index.src.html
@@ -31,6 +31,8 @@
 		<script src="index/StartContainerModalCtrl.js"></script>
 		<script src="index/InspectContainerModalCtrl.js"></script>
 		<script src="index/CopyImageModalCtrl.js"></script>
+		<script src="index/ExportConfigModalCtrl.js"></script>
+		<script src="index/ImportConfigModalCtrl.js"></script>
 		<script src="index/main.js"></script>
 		<!-- no load in dev mode
 		<script src="index/angular-template.tmp.js"></script>
