--- a/directives/dockerContainers.html
+++ b/directives/dockerContainers.html
@@ -75,7 +75,7 @@
 						<button ng-click="attach($event, c)" tooltip="{{'Press [SHIFT] to load full logs.' | translate}}" tooltip-placement="left" class="btn btn-primary btn-xs" translate>Attach</button>
 						<button ng-click="pause(c)" ng-show="c.running && !c.paused" class="btn btn-success btn-xs" translate>Pause</button>
 						<button ng-click="unpause(c)" ng-show="c.running && c.paused" class="btn btn-success btn-xs" translate>Resume</button>
-						<button ng-click="openStartContainerModal(c)" ng-show="!c.running" class="btn btn-info btn-xs" translate>Start</button>
+						<button ng-click="openStartContainerModal($event, c)" ng-show="!c.running" tooltip="{{'Press [SHIFT] to control more start options.' | translate}}" class="btn btn-info btn-xs" translate>Start</button>
 						<button ng-click="stop(c)" ng-show="c.running && !c.paused" class="btn btn-warning btn-xs" translate>Stop</button>
 						<button ng-click="remove(c)" ng-show="!c.paused" class="btn btn-danger btn-xs" translate>Remove</button>
 					</td>
