support commit container to image, fix image copy tag bug

--- a/index.src.html
+++ b/index.src.html
@@ -27,6 +27,7 @@
 		<script src="directives/dockerHostConfig.js"></script>
 		<script src="directives/dockerImages.js"></script>
 		<script src="directives/selectDocker.js"></script>
+		<script src="index/CommitContainerModalCtrl.js"></script>
 		<script src="index/CreateContainerModalCtrl.js"></script>
 		<script src="index/StartContainerModalCtrl.js"></script>
 		<script src="index/InspectContainerModalCtrl.js"></script>
