--- a/index.html
+++ b/index.html
@@ -1,80 +1,1 @@
-<!doctype html>
-<html lang="zh-TW" ng-app="KDockerWeb">
-	<head>
-		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta name="description" content="Simple online lxc-docker web ui, use html storage to handle connection config">
-		<title>KDockerWeb</title>
-		<link rel="shortcut icon" href="favicon.png">
-		<link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.min.css">
-		<link rel="stylesheet" href="index/main.min.css">
-		<script src="lib/angular/angular.min.js"></script>
-		<script src="lib/angular-ui-bootstrap-bower/ui-bootstrap-tpls.min.js"></script>
-		<script src="index/main.min.js"></script>
-	</head>
-	<body ng-controller="IndexCtrl" style="padding: 10px;">
-		<div ng-show="devMode" style="position: fixed; left: 1em; bottom: 3em; font-size: 0.8em;">
-			<a href="http://docs.docker.io/en/latest/reference/api/docker_remote_api/" target="_blank">Docker Remote API</a>
-		</div>
-		<div style="position: fixed; left: 1em; bottom: 1em;">v{{DockerData.version}}</div>
-		<table style="width: 100%; height: 100%;">
-			<tr style="height: 1em;">
-				<td colspan="2">
-					<table style="width: 100%;">
-						<tr>
-							<td style="vertical-align: top; width: 1em;">
-								<a href="."><button class="btn btn-primary">KDocker-Web</button></a>
-							</td>
-							<td style="padding: 0em 0.5em;">
-								<alert style="margin: 0em; padding: 0.4em 1em;" ng-repeat="alert in alerts" type="{{alert.type}}" close="alerts.splice($index, 1)" ng-click="alerts.splice($index, 1)">{{alert.msg}}</alert>
-							</td>
-							<td style="vertical-align: top; width: 1em;">
-								<select ng-model="locale" ng-options="lang.id as lang.name for lang in DockerData.locales" ng-change="updateLocale()" class="form-control input-sm" style="width: auto;"></select>
-							</td>
-						</tr>
-					</table>
-				</td>
-			</tr>
-			<tr>
-				<td style="vertical-align: top; width: 10em; padding-top: 1em; line-height: 3em;">
-					<div>
-						<button ng-class="{'animated tada': loadingCtrl.container}" ng-model="tab" btn-radio="'Containers'" class="btn btn-primary">{{"Containers" | translate}}</button>
-					</div>
-					<div>
-						<button ng-class="{'animated tada': loadingCtrl.image}" ng-model="tab" btn-radio="'Images'" class="btn btn-primary">{{"Images" | translate}}</button>
-					</div>
-					<div>
-						<button ng-model="tab" btn-radio="'Config'" class="btn btn-primary">{{"Config" | translate}}</button>
-					</div>
-				</td>
-				<td style="vertical-align: top;">
-
-					<div ng-controller="dockerHostConfigCtrl" ng-show="tab == 'Config'">
-						<docker-host-config></docker-host-config>
-					</div>
-
-					<div ng-controller="dockerContainersCtrl" ng-show="tab == 'Containers'">
-						<docker-containers></docker-containers>
-					</div>
-
-					<div ng-controller="dockerImagesCtrl" ng-show="tab == 'Images'">
-						<docker-images></docker-images>
-					</div>
-
-				</td>
-			</tr>
-		</table>
-		<div ng-show="!!loading" style="position: fixed; width: 100%; height: 100%; top: 0px; left: 0px;">
-			<div style="position: fixed; width: 100%; height: 100%; top: 0px; left: 0px; background: #fff;"></div>
-			<table style="position: fixed; width: 100%; height: 100%; top: 0px; left: 0px;">
-				<tr>
-					<td style="text-align: center;">
-						<img class="shaker" src="logo.png" style="max-width: 100%; max-height: 100%; object-fit: contain; display: inline-block;"/>
-						<img src="index/loading.png" class="spinner" style="width: 128px; height: 128px; display: inline-block;"/>
-					</td>
-				</tr>
-			</table>
-		</div>
-	</body>
-</html>
+<!doctype html><html lang=zh-TW ng-app=KDockerWeb><head><meta http-equiv=Content-Type content="text/html; charset=utf-8"><meta http-equiv=X-UA-Compatible content="IE=edge"><meta name=viewport content="width=device-width, initial-scale=1.0"><meta name=description content="Simple online lxc-docker web ui, use html storage to handle connection config"><title>KDockerWeb</title><link rel="shortcut icon" href=favicon.png><link rel=stylesheet href=lib/bootstrap/dist/css/bootstrap.min.css><link rel=stylesheet href=index/main.min.css><script src=lib/angular/angular.min.js></script><script src=lib/angular-ui-bootstrap-bower/ui-bootstrap-tpls.min.js></script><script src=index/main.min.js></script></head><body ng-controller=IndexCtrl style="padding: 10px;"><div ng-show=devMode style="position: fixed; left: 1em; bottom: 3em; font-size: 0.8em;"><a href="http://docs.docker.io/en/latest/reference/api/docker_remote_api/" target=_blank>Docker Remote API</a></div><div style="position: fixed; left: 1em; bottom: 1em;">v{{DockerData.version}}</div><table style="width: 100%; height: 100%;"><tr style="height: 1em;"><td colspan=2><table style="width: 100%;"><tr><td style="vertical-align: top; width: 1em;"><a href=.><button class="btn btn-primary">KDocker-Web</button></a></td><td style="padding: 0em 0.5em;"><alert style="margin: 0em; padding: 0.4em 1em;" ng-repeat="alert in alerts" type={{alert.type}} close="alerts.splice($index, 1)" ng-click="alerts.splice($index, 1)">{{alert.msg}}</alert></td><td style="vertical-align: top; width: 1em;"><select ng-model=locale ng-options="lang.id as lang.name for lang in DockerData.locales" ng-change=updateLocale() class="form-control input-sm" style="width: auto;"></select></td></tr></table></td></tr><tr><td style="vertical-align: top; width: 10em; padding-top: 1em; line-height: 3em;"><div><button ng-class="{'animated tada': loadingCtrl.container}" ng-model=tab btn-radio="'Containers'" class="btn btn-primary">{{"Containers" | translate}}</button></div><div><button ng-class="{'animated tada': loadingCtrl.image}" ng-model=tab btn-radio="'Images'" class="btn btn-primary">{{"Images" | translate}}</button></div><div><button ng-model=tab btn-radio="'Config'" class="btn btn-primary">{{"Config" | translate}}</button></div></td><td style="vertical-align: top;"><div ng-controller=dockerHostConfigCtrl ng-show="tab == 'Config'"><docker-host-config></docker-host-config></div><div ng-controller=dockerContainersCtrl ng-show="tab == 'Containers'"><docker-containers></docker-containers></div><div ng-controller=dockerImagesCtrl ng-show="tab == 'Images'"><docker-images></docker-images></div></td></tr></table><div ng-show=!!loading style="position: fixed; width: 100%; height: 100%; top: 0px; left: 0px;"><div style="position: fixed; width: 100%; height: 100%; top: 0px; left: 0px; background: #fff;"></div><table style="position: fixed; width: 100%; height: 100%; top: 0px; left: 0px;"><tr><td style="text-align: center;"><img class=shaker src=logo.png style="max-width: 100%; max-height: 100%; object-fit: contain; display: inline-block;"> <img src=index/loading.png class=spinner style="width: 128px; height: 128px; display: inline-block;"></td></tr></table></div></body></html>
