refine some file structure

--- a/index.src.html
+++ b/index.src.html
@@ -16,13 +16,16 @@
 		<script src="lib/angular/angular.min.js"></script>
 		<script src="lib/angular-ui-bootstrap-bower/ui-bootstrap-tpls.min.js"></script>
 		<!-- build:js index/main.min.js -->
-		<script src="lib/ga.js"></script>
+		<script src="config/ga.js"></script>
 		<script src="lib/angular-animate/angular-animate.js"></script>
 		<script src="lib/angular-local-storage/angular-local-storage.js"></script>
 		<script src="lib/angular-translate/angular-translate.js"></script>
 		<script src="lib/xterm.js/src/xterm.js"></script>
-		<script src="lib/app.js"></script>
-		<script src="lib/locale.js"></script>
+		<script src="config/app.js"></script>
+		<script src="config/locale.js"></script>
+		<script src="services/LocationHash.js"></script>
+		<script src="services/DockerData.js"></script>
+		<script src="services/DockerHost.js"></script>
 		<script src="directives/dockerContainers.js"></script>
 		<script src="directives/dockerHostConfig.js"></script>
 		<script src="directives/dockerImages.js"></script>
