--- a/index.src.html
+++ b/index.src.html
@@ -26,6 +26,7 @@
 		<script src="services/LocationHash.js"></script>
 		<script src="services/DockerData.js"></script>
 		<script src="services/DockerHost.js"></script>
+		<script src="services/DockerAction.js"></script>
 		<script src="directives/dockerContainers.js"></script>
 		<script src="directives/dockerHostConfig.js"></script>
 		<script src="directives/dockerImages.js"></script>
