--- a/directives/dockerImages.html
+++ b/directives/dockerImages.html
@@ -52,6 +52,7 @@
 					</td>
 					<td>
 						<button ng-click="openCreateContainerModal(img)" class="btn btn-primary btn-xs" translate>Create</button>
+						<button ng-click="openTagImageModal(img)" class="btn btn-success btn-xs" translate>Tag</button>
 						<button ng-click="openCopyImageModal(img)" ng-show="DockerData.dockerHosts.length > 1" class="btn btn-info btn-xs" translate>Copy</button>
 						<button ng-click="remove(img)" class="btn btn-danger btn-xs" translate>Remove</button>
 					</td>
