--- a/index.src.html
+++ b/index.src.html
@@ -34,6 +34,7 @@
 		<script src="index/CommitContainerModalCtrl.js"></script>
 		<script src="index/CreateContainerModalCtrl.js"></script>
 		<script src="index/StartContainerModalCtrl.js"></script>
+		<script src="index/TagImageModalCtrl.js"></script>
 		<script src="index/InspectContainerModalCtrl.js"></script>
 		<script src="index/CopyImageModalCtrl.js"></script>
 		<script src="index/ExportConfigModalCtrl.js"></script>
