--- a/directives/dockerImages.html
+++ b/directives/dockerImages.html
@@ -41,7 +41,9 @@
 					<td>
 						<div ng-repeat="tag in img.RepoTags">
 							<span>{{tag}}</span>
-							<button ng-click="removeTag(tag)" ng-show="img.RepoTags.length > 1" class="btn btn-danger btn-xs" translate>X</button>
+							<button ng-click="pullImage(tag)" tooltip="{{'Pull image from registry' | translate}}" class="btn btn-info btn-xs"><span class="glyphicon glyphicon-arrow-down"></span></button>
+							<button ng-click="pushImage(tag)" ng-show="isPrivateRegistryTag(tag)" tooltip="{{'Push image to registry' | translate}}" class="btn btn-success btn-xs"><span class="glyphicon glyphicon-arrow-up"></span></button>
+							<button ng-click="removeTag(tag)" ng-show="img.RepoTags.length > 1" class="btn btn-danger btn-xs">X</button>
 						</div>
 					</td>
 					<td>
