double click tag name to select in image, container view

--- a/directives/dockerContainers.html
+++ b/directives/dockerContainers.html
@@ -50,10 +50,10 @@
 						<span title="{{c.Id}}" style="white-space: nowrap;">{{c.Id.substr(0, 8)}} ...</span>
 					</td>
 					<td>
-						<span>{{c.name}}</span>
+						<span class="ng-dblclick-sel-text">{{c.name}}</span>
 					</td>
 					<td>
-						<span>{{c.Image}}</span>
+						<span class="ng-dblclick-sel-text">{{c.Image}}</span>
 					</td>
 					<td>
 						<span>{{c.Command}}</span>
