--- a/index.src.html
+++ b/index.src.html
@@ -29,6 +29,7 @@
 		<script src="services/DockerAction.js"></script>
 		<script src="services/RegistryAction.js"></script>
 		<script src="services/RegistryHost.js"></script>
+		<script src="directives/dblclickSelText.js"></script>
 		<script src="directives/dockerContainers.js"></script>
 		<script src="directives/dockerHostConfig.js"></script>
 		<script src="directives/dockerImages.js"></script>
