--- a/index/ExportConfigModalContent.html
+++ b/index/ExportConfigModalContent.html
@@ -5,7 +5,7 @@
 	</div>
 	<div class="modal-body" style="overflow: auto; padding-left: 2em;">
 		<div translate>Please copy the following data to your clipboard by [Ctrl] + 'C' or [CMD] + 'C'</div>
-		<input type="text" ng-model="configJson" select-on-click style="width: 100%;"/>
+		<input type="text" ng-model="configJson" class="ng-click-sel-text" style="width: 100%;"/>
 	</div>
 	<div class="modal-footer">
 		<button class="btn btn-primary" ng-click="close()" translate>Close</button>
