--- a/index.src.html
+++ b/index.src.html
@@ -23,6 +23,7 @@
 		<script src="lib/xterm.js/src/xterm.js"></script>
 		<script src="config/app.js"></script>
 		<script src="config/locale.js"></script>
+		<script src="services/containerName.js"></script>
 		<script src="services/LocationHash.js"></script>
 		<script src="services/DockerData.js"></script>
 		<script src="services/DockerHost.js"></script>
